# ai-parenting

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  article.html  article_wechat.html  docker-compose.yml  pyproject.toml
.workbuddy/plans/: ai-edu-analysis-framework_681dc481.md  (+14 more)
admin-dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
docs/: ai_parenting_7day_microplan_examples_v1.md  ai_parenting_7day_microplan_v1.md  ai_parenting_ai_output_schema_v1.md  ai_parenting_component_decomposition_v1.md  ai_parenting_component_interfaces_v1.md  ai_parenting_data_schema_v1.md  ai_parenting_lowfi_prototype_v1.html  ai_parenting_observation_checklist_v1.md  ai_parenting_observation_model_v1.md  ai_parenting_page_information_architecture_v1.md  ai_parenting_product_design.md  ai_parenting_project_milestones.md  ai_parenting_prompt_templates_v1.md  ai_parenting_service_architecture_v1.md  gap_analysis_round2.md  ios_gap_analysis.md  ios_local_debug_checklist.md  ms1_implementation_plan.md  overview.md
gateway/: index.js
gateway-legacy/: package.json
ios/: Package.swift
src/: alembic.ini
tests/: conftest.py  test_api_routes.py  test_audit.py  test_backend_models.py  test_boundary_checker.py  test_channels_api.py  test_child_service.py  test_content_enums.py  test_enums.py  test_evidence_engine.py  test_home_service.py  test_inbound_e2e.py  test_memory_api.py  test_message_service.py  test_ms3_api_routes.py  test_observation_registry.py  test_onboarding_integration.py  test_orchestrator.py  test_plan_feedback_aggregator.py  test_plan_generation_renderer.py  test_providers.py  test_push_service.py  test_quality_guardrail.py  test_record_service.py  test_renderer.py  test_risk_escalation.py  test_schemas.py  test_skills.py  test_template_engine.py  test_voice_api.py  test_webhooks_api.py  test_weekly_feedback_renderer.py  test_weekly_feedback_service.py
(+202 files in other folders)
